# ai_engineering_certificate

./: .gitignore  RAG_SETUP.md  actual_values.json  app.py  cert.ipynb  cert2.ipynb  deliverables.md  forecast_values.json  insights.ipynb  main.py  product.md  pyproject.toml  variance_percentages.json  variances.json
Task5_Evaluating_RAG_With_Ragas/: Evaluating_RAG_with_Ragas_(2025)_AI_Makerspace.ipynb  pyproject.toml
Task6_Advanced_Retrieval/: Advanced_Retrieval_with_LangChain_Assignment.ipynb  pyproject.toml
dataset/: nycfine_FS.xlsx
frontend/: README.md  package-lock.json  package.json
frontend/public/: index.html
frontend/src/: App.css  App.tsx  index.css  types.ts
frontend/src/components/: ApiKeyModal.css  ApiKeyModal.tsx  ChatInput.css  ChatInput.tsx  ChatMessage.css  ChatMessage.tsx  SuggestionButtons.css  SuggestionButtons.tsx
frontend/src/services/: api.ts
rag_dataset/: finance_rag_corpus_nycfine.txt
